# polar2wgs84

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .gitmessage.txt  .pre-commit-config.yaml  AUTHORS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  pytest.ini  sonar-project.properties  tox.private.ini  tox.public.ini
docs/: applicable_docs.md  conventions.md  external_view.md  glossary.md  history.md  index.md  introduction.md  legal.md  operation_manual.md  operations_basics.md  operations_environment.md  profile.md  purpose.md  reference_manual.md  report.html  tutorial.md
docs/examples/: README.md
docs/examples/examples_antimeridian/: README.md  plot_footprint2.py  plot_footprint3.py  plot_footprint6.py
docs/examples/examples_complex/: README.md  plot_footprint10.py  plot_footprint12.py  plot_footprint13.py  plot_footprint14.py  plot_footprint15.py  plot_footprint16.py  plot_footprint17.py  plot_footprint7.py  plot_footprint8.py  plot_footprint9.py
docs/examples/examples_pole/: README.md  plot_footprint5.py
docs/examples/examples_simple/: README.md  plot_footprint1.py  plot_footprint4.py
docs/stylesheets/: extra.css
macros/: macros.py
scripts/: license.py
src/polar2wgs84/: __init__.py  __main__.py  _version.py  angle_operation.py  antimeridian.py  config.py  densify_geometry.py  exception.py  footprint.py  logging_config.py  monitoring.py  pole.py  projection.py  splitter.py  visu.py
tests/: conftest.py
tests/acceptance/: footprint1.json  footprint10.json  footprint11.json  footprint12.json  footprint13.json  footprint14.json  footprint15.json  footprint16.json  footprint17.json  footprint18.json  footprint19.json  footprint2.json  footprint3.json  footprint4.json  footprint5.json  footprint6..json  footprint6.json  footprint7.json  footprint8.json  footprint9.json  manual_test.py  profile_test.py
tests/unit/: angle_operation_test.py  densify_geometry_test.py  geometry_processor_test.py  monitoring_test.py  polar2wgs84_test.py  pole_test.py  projection_test.py
