[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | docs
  | scripts
  | docker
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.towncrier]
package = "mon_projet"
filename = "docs/history.md"
directory = "changelog.d"
title_format = "{version} ({project_date})"
template = "docs/changelog_template.jinja2"
issue_format = "[#{issue}](https://gitlab.cnes.fr/pdssp/common/polar2wgs84/-/issues/{issue})"


[project]
name = "polar2wgs84"
readme = "README.md"
description = "polar2wgs84 is a Python tool to seamlessly convert geographic footprints between polar stereographic projections (EPSG:3031/EPSG:3575) and WGS84 (EPSG:4326), handling pole-crossing geometries, densification, and validation for accurate GIS workflows."
authors = [{name="Jean-Christophe Malapert", email="jean-christophe.malapert@cnes.fr"}, ]
license = "Apache-2.0"
packages = [{include = "polar2wgs84"}]
homepage = "https://gitlab.cnes.fr/pdssp/common/polar2wgs84"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "cartopy==0.25.0",
    "loguru==0.7.3",
    "matplotlib==3.10.8",
    "numpy==2.3.5",
    "pyproj==3.7.2",
    "shapely==2.1.2",
]
[project.scripts]
polar2wgs84 = "polar2wgs84.__main__:run"

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "dockerfile-parse>=2.0.1",
    "bump-my-version>=1.2.4",
    "coverage>=7.12.0",
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.6.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-macros-plugin>=1.5.0",
    "mkdocs-material>=9.7.0",
    "mkdocs-with-pdf>=0.9.3",
    "mkdocstrings[python]>=1.0.0",
    "pip-licenses>=5.5.0",
    "pre-commit>=4.5.0",
    "pre-commit-hooks>=6.0.0",
    "pytest>=9.0.1",
    "pytest-html>=4.1.1",
    "pytest-json-report>=1.5.0",
    "pytest-profiling>=1.8.1",
    "towncrier>=25.8.0",
    "docker>=7.1.0",
    "pytest-mock>=3.15.1",
    "black>=25.11.0",
    "tox>=4.32.0",
    "flake8>=7.3.0",
    "mccabe>=0.7.0",
    "mypy>=1.19.0",
    "pylint>=4.0.4",
    "toml>=0.10.2",
    "mkdocs-gallery==0.10.4",
]
